fixed overflow in the advertisement slider

--- a/src/Components/AdvertisementCard/AdvertisementCard.css
+++ b/src/Components/AdvertisementCard/AdvertisementCard.css
@@ -1,5 +1,5 @@
 .overlay{
    
-    background-color: rgba(0, 0,0, 0.5);
+    background-color: rgba(31, 30, 30, 0.5);
    
 }
